<resources>
    <string name="app_name">MyApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_fastscroll">Fast scroll</string>
    <string name="action_addpadding">Add padding</string>
    <string name="action_showShadow">Show shadow</string>
    <string name="action_showHeaderAndFooter">Show Header &amp; Footer</string>


    <string name="accountName">用户名:</string>
    <string name="accountHint">手机号</string>
    <string name="passwordHint">6-12位</string>
    <string name="passwordName">密       码:</string>
    <string name="loginComit">登录</string>
    <string name="mainRegister">注册</string>
    <string name="mainLogin">登录</string>
    <string name="phoneComit">获取验证码</string>
    <string name="verifyCode">验证码</string>
    <string name="verifyCodeHint">6位数</string>
    <string name="registComit">注册</string>
    <string name="phoneError">请输入正确的手机号</string>
    <string name="verifyCodeError">验证码必须是6位</string>
    <string name="passwordError">密码必须是6-12位</string>
    <string name="registSuccess">注册成功</string>
    <string name="registFail">注册失败</string>
    <string name="verifyCodeComitError">获取验证码失败</string>
    <string name="loginFail">登录失败</string>
    <string name="loginSuccess">登录成功</string>
    <string name="managerApplyNotice">联系管理员:小蔡\n QQ:763287516\n tel:13779926287</string>
    <string name="managerApplyNoticeTitle">管理员申请须知</string>
    <string name="accountLogin">请登录</string>
    <string name="tip_add_hint_titile">帖子标题</string>
    <string name="tip_add_hint_content">帖子内容</string>
    <string name="tip_add_commit">提交</string>
    <string name="tip_add_title_error">帖子标题至少6个字符</string>
    <string name="tip_add_content_error">帖子内容至少6个字符</string>
    <string name="tip_public">发表</string>
    <string name="block_title">邻里圈</string>
    <string name="tip_detial_title">帖子详情</string>

</resources>
