<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/accountHint"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/etAccount"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:hint="@string/accountHint"
                android:inputType="phone"
                tools:text="13779926287" />

            <Button
                android:id="@+id/btnPhoneComit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phoneComit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/verifyCode"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/etVerifyCode"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:hint="@string/verifyCodeHint"
                tools:text="123456" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/passwordName"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:hint="@string/passwordHint"
                android:inputType="textPassword"
                tools:text="123456" />
        </LinearLayout>

        <Button
            android:id="@+id/btnRegist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registComit" />
    </LinearLayout>
</RelativeLayout>