<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tip_add_hint_titile" />

    <EditText
        android:id="@+id/edContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tip_add_hint_content"
        android:lines="5" />

    <Button
        android:id="@+id/btnComit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tip_add_commit" />
</LinearLayout>